cabal-version:       2.4
name:                scheme
version:             0.0.0.0
synopsis:            n
description:         n
homepage:            https://github.com/congee/scheme
bug-reports:         https://github.com/congee/scheme/issues
license:             MIT
license-file:        LICENSE
author:              Congee
maintainer:          Congee <congeec@qq.com>
copyright:           2020 Congee
category:            Compilers/Interpreters
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/congee/scheme.git

common common-options
  build-depends:
      HTTP
    , base >=4.7 && <5
    , containers
    , directory
    , haskeline
    , mtl
    , parsec
    , text
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:
      LispVal
    , Eval
    , Prim
    , Repl
    , Parser

executable scheme
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       scheme
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite scheme-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       scheme
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
